[gd_scene load_steps=8 format=3 uid="uid://kvelexcshhn5"]

[ext_resource type="Texture2D" uid="uid://cixq0446wltg2" path="res://source/actors/interaction_marker/assets/interaction_marker.png" id="1_3ofe7"]
[ext_resource type="Script" uid="uid://cknmy1bpbpwer" path="res://source/actors/interaction_marker/scripts/interaction_marker.gd" id="2_1eiq3"]

[sub_resource type="Animation" id="Animation_1eiq3"]
resource_name = "float"
length = 2.0
loop_mode = 1
step = 1.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [Vector2(0, -3), Vector2(0, 3)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_y0epw"]
_data = {
&"float": SubResource("Animation_1eiq3")
}

[sub_resource type="Animation" id="Animation_3ofe7"]
resource_name = "fade_in"
length = 0.5
step = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_06pa0"]
resource_name = "fade_out"
length = 0.5
step = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_fripg"]
_data = {
&"fade_in": SubResource("Animation_3ofe7"),
&"fade_out": SubResource("Animation_06pa0")
}

[node name="InteractionMarker" type="Sprite2D"]
modulate = Color(1, 1, 1, 0)
texture = ExtResource("1_3ofe7")
script = ExtResource("2_1eiq3")

[node name="FloatAnimator" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_y0epw")
}

[node name="FadeAnimator" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_fripg")
}
